// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionItem "open" command renders as link 1`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <a
      class="anchorLink btn btnLink test-action-item actionItemLink"
      href="https://example.com/bar"
      tabindex="0"
    >
       t 
    </a>
  </span>
</DocumentFragment>
`;

exports[`ActionItem "open" command renders as link that opens in a new tab, but without icon for a different origin as the alt action and a primary action defined 1`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <a
      class="anchorLink btn btnLink test-action-item actionItemLink"
      href="https://other.com/foo"
      rel="noopener noreferrer"
      tabindex="0"
      target="_blank"
    >
       primary 
    </a>
  </span>
</DocumentFragment>
`;

exports[`ActionItem "open" command renders as link with icon and opens a new tab for a different origin 1`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <a
      class="anchorLink btn btnLink test-action-item actionItemLink"
      href="https://other.com/foo"
      rel="noopener noreferrer"
      tabindex="0"
      target="_blank"
    >
       t 
      <openinnewicon />
    </a>
  </span>
</DocumentFragment>
`;

exports[`ActionItem actionItem variant 1`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <button
      aria-label="d"
      class="test-action-item"
      type="button"
    >
      <img
        alt="d"
        src="u"
      />
       g: t 
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem non-actionItem variant 1`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <button
      aria-label="d"
      class="test-action-item"
      type="button"
    >
      <img
        alt="d"
        src="u"
      />
       g: t 
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem non-pressed actionItem 1`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <button
      aria-pressed="false"
      class="test-action-item"
      data-action-item-pressed="false"
      type="button"
    >
       b 
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem noop command 1`] = `
<DocumentFragment>
  <span
    data-tooltip="d"
  >
    <img
      alt="d"
      src="u"
    />
     g: t
  </span>
</DocumentFragment>
`;

exports[`ActionItem pressed toggle actionItem 1`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <button
      aria-pressed="true"
      class="test-action-item"
      data-action-item-pressed="true"
      type="button"
    >
       b 
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem run command 1`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <button
      aria-label="d"
      class="test-action-item"
      type="button"
    >
      <img
        alt="d"
        src="u"
      />
       g: t 
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem run command 2`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <button
      aria-label="d"
      class="test-action-item"
      type="button"
    >
      <img
        alt="d"
        src="u"
      />
       g: t 
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem run command with error 1`] = `
<DocumentFragment>
  <span
    aria-describedby="radix-7"
    class="tooltip"
    data-state="delayed-open"
    role="presentation"
  >
    <button
      aria-label="d"
      class="test-action-item"
      type="button"
    >
      <img
        alt="d"
        src="u"
      />
       g: t 
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem run command with error with showInlineError 1`] = `
<DocumentFragment>
  <span
    aria-describedby="radix-8"
    class="tooltip"
    data-state="delayed-open"
    role="presentation"
  >
    <button
      aria-label="Error: x"
      class="test-action-item"
      type="button"
    >
      <img
        alt="d"
        src="u"
      />
       g: t 
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 1`] = `
<DocumentFragment>
  <span
    aria-describedby="radix-6"
    class="tooltip"
    data-state="delayed-open"
    role="presentation"
  >
    <button
      aria-label="d"
      class="test-action-item actionItemLoading"
      disabled=""
      type="button"
    >
      <img
        alt="d"
        src="u"
      />
       g: t 
      <div
        class="loader"
        data-testid="action-item-spinner"
      >
        <div
          class="loadingSpinner"
        />
      </div>
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 2`] = `
<DocumentFragment>
  <span
    aria-describedby="radix-6"
    class="tooltip"
    data-state="delayed-open"
    role="presentation"
  >
    <button
      aria-label="d"
      class="test-action-item"
      type="button"
    >
      <img
        alt="d"
        src="u"
      />
       g: t 
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionItem title element 1`] = `
<DocumentFragment>
  <span
    class="tooltip"
    data-state="closed"
    role="presentation"
  >
    <button
      aria-label="d"
      class="test-action-item"
      type="button"
    >
      <span>
        t2
      </span>
       
    </button>
  </span>
</DocumentFragment>
`;
